cg/Src/y.output
Terminals unused in grammar

    PREPROC
    MTYPE
    LABEL
    NON_ATOMIC


State 143 conflicts: 6 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: units

    2 units: unit
    3      | units unit

    4 unit: proc
    5     | init
    6     | claim
    7     | ltl
    8     | events
    9     | one_decl
   10     | utype
   11     | c_fcts
   12     | ns
   13     | semi
   14     | error

   15 l_par: '('

   16 r_par: ')'

   17 $@1: ε

   18 $@2: ε

   19 proc: inst proctype NAME $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

   20 proctype: PROCTYPE
   21         | D_PROCTYPE

   22 inst: ε
   23     | ACTIVE
   24     | ACTIVE '[' const_expr ']'
   25     | ACTIVE '[' NAME ']'

   26 $@3: ε

   27 init: INIT $@3 Opt_priority body

   28 $@4: ε

   29 ltl: LTL optname2 $@4 ltl_body

   30 ltl_body: '{' full_expr OS '}'
   31         | error

   32 $@5: ε

   33 claim: CLAIM optname $@5 body

   34 optname: ε
   35        | NAME

   36 optname2: ε
   37         | NAME

   38 $@6: ε

   39 events: TRACE $@6 body

   40 $@7: ε

   41 utype: TYPEDEF NAME '{' $@7 decl_lst '}'

   42 nm: NAME
   43   | INAME

   44 $@8: ε

   45 ns: INLINE nm l_par $@8 args r_par

   46 c_fcts: ccode
   47       | cstate

   48 cstate: C_STATE STRING STRING
   49       | C_TRACK STRING STRING
   50       | C_STATE STRING STRING STRING
   51       | C_TRACK STRING STRING STRING

   52 ccode: C_CODE
   53      | C_DECL

   54 cexpr: C_EXPR

   55 $@9: ε

   56 $@10: ε

   57 body: '{' $@9 sequence OS $@10 '}'

   58 sequence: step
   59         | sequence MS step

   60 step: one_decl
   61     | XU vref_lst
   62     | NAME ':' one_decl
   63     | NAME ':' XU
   64     | stmnt

   65 $@11: ε

   66 step: stmnt UNLESS $@11 stmnt
   67     | error

   68 vis: ε
   69    | HIDDEN
   70    | SHOW
   71    | ISLOCAL

   72 asgn: ε
   73     | ':' NAME ASGN
   74     | ASGN

   75 osubt: ε
   76      | ':' NAME

   77 one_decl: vis TYPE osubt var_list
   78         | vis UNAME var_list
   79         | vis TYPE asgn '{' nlst '}'

   80 decl_lst: one_decl
   81         | one_decl SEMI decl_lst

   82 decl: ε
   83     | decl_lst

   84 vref_lst: varref
   85         | varref ',' vref_lst

   86 var_list: ivar
   87         | ivar ',' var_list

   88 c_list: CONST
   89       | CONST ',' c_list

   90 ivar: vardcl
   91     | vardcl ASGN '{' c_list '}'
   92     | vardcl ASGN expr
   93     | vardcl ASGN ch_init

   94 ch_init: '[' const_expr ']' OF '{' typ_list '}'

   95 vardcl: NAME
   96       | NAME ':' CONST
   97       | NAME '[' const_expr ']'
   98       | NAME '[' NAME ']'

   99 varref: cmpnd

  100 pfld: NAME

  101 $@12: ε

  102 pfld: NAME $@12 '[' expr ']'

  103 $@13: ε

  104 cmpnd: pfld $@13 sfld

  105 sfld: ε
  106     | '.' cmpnd

  107 stmnt: Special
  108      | Stmnt

  109 $@14: ε

  110 for_pre: FOR l_par $@14 varref

  111 for_post: '{' sequence OS '}'
  112         | SEMI '{' sequence OS '}'

  113 $@15: ε

  114 Special: varref RCV $@15 rargs

  115 $@16: ε

  116 Special: varref SND $@16 margs

  117 $@17: ε

  118 Special: for_pre ':' expr DOTDOT expr r_par $@17 for_post

  119 @18: ε

  120 Special: for_pre IN varref r_par @18 for_post
  121        | SELECT l_par varref ':' expr DOTDOT expr r_par
  122        | IF options FI

  123 $@19: ε

  124 Special: DO $@19 options OD
  125        | BREAK
  126        | GOTO NAME
  127        | NAME ':' stmnt
  128        | NAME ':'
  129        | error

  130 Stmnt: varref ASGN full_expr
  131      | varref INCR
  132      | varref DECR
  133      | SET_P l_par two_args r_par

  134 $@20: ε

  135 Stmnt: PRINT l_par STRING $@20 prargs r_par
  136      | PRINTM l_par varref r_par
  137      | PRINTM l_par CONST r_par
  138      | ASSERT full_expr
  139      | ccode

  140 $@21: ε

  141 Stmnt: varref R_RCV $@21 rargs

  142 $@22: ε

  143 Stmnt: varref RCV $@22 LT rargs GT

  144 $@23: ε

  145 Stmnt: varref R_RCV $@23 LT rargs GT

  146 $@24: ε

  147 Stmnt: varref O_SND $@24 margs
  148      | full_expr
  149      | ELSE

  150 $@25: ε

  151 Stmnt: ATOMIC '{' $@25 sequence OS '}'

  152 $@26: ε

  153 Stmnt: D_STEP '{' $@26 sequence OS '}'

  154 $@27: ε

  155 Stmnt: '{' $@27 sequence OS '}'

  156 $@28: ε

  157 $@29: ε

  158 Stmnt: INAME $@28 l_par args r_par $@29 Stmnt

  159 $@30: ε

  160 $@31: ε

  161 Stmnt: varref ASGN INAME $@30 l_par args r_par $@31 Stmnt
  162      | RETURN full_expr

  163 options: option
  164        | option options

  165 $@32: ε

  166 option: SEP $@32 sequence OS

  167 OS: ε
  168   | semi

  169 semi: SEMI
  170     | ARROW

  171 MS: semi
  172   | MS semi

  173 aname: NAME
  174      | PNAME

  175 const_expr: CONST
  176           | '-' const_expr
  177           | l_par const_expr r_par
  178           | const_expr '+' const_expr
  179           | const_expr '-' const_expr
  180           | const_expr '*' const_expr
  181           | const_expr '/' const_expr
  182           | const_expr '%' const_expr

  183 expr: l_par expr r_par
  184     | expr '+' expr
  185     | expr '-' expr
  186     | expr '*' expr
  187     | expr '/' expr
  188     | expr '%' expr
  189     | expr '&' expr
  190     | expr '^' expr
  191     | expr '|' expr
  192     | expr GT expr
  193     | expr LT expr
  194     | expr GE expr
  195     | expr LE expr
  196     | expr EQ expr
  197     | expr NE expr
  198     | expr AND expr
  199     | expr OR expr
  200     | expr LSHIFT expr
  201     | expr RSHIFT expr
  202     | '~' expr
  203     | '-' expr
  204     | SND expr
  205     | l_par expr ARROW expr ':' expr r_par

  206 $@33: ε

  207 expr: RUN aname $@33 l_par args r_par Opt_priority
  208     | LEN l_par varref r_par
  209     | ENABLED l_par expr r_par
  210     | GET_P l_par expr r_par

  211 $@34: ε

  212 expr: varref RCV $@34 '[' rargs ']'

  213 $@35: ε

  214 expr: varref R_RCV $@35 '[' rargs ']'
  215     | varref
  216     | cexpr
  217     | CONST
  218     | TIMEOUT
  219     | NONPROGRESS
  220     | PC_VAL l_par expr r_par
  221     | PNAME '[' expr ']' '@' NAME
  222     | PNAME '[' expr ']' ':' pfld
  223     | PNAME '@' NAME
  224     | PNAME ':' pfld
  225     | ltl_expr

  226 Opt_priority: ε
  227             | PRIORITY CONST

  228 full_expr: expr
  229          | Expr

  230 ltl_expr: expr UNTIL expr
  231         | expr RELEASE expr
  232         | expr WEAK_UNTIL expr
  233         | expr IMPLIES expr
  234         | expr EQUIV expr
  235         | NEXT expr
  236         | ALWAYS expr
  237         | EVENTUALLY expr

  238 Expr: Probe
  239     | l_par Expr r_par
  240     | Expr AND Expr
  241     | Expr AND expr
  242     | expr AND Expr
  243     | Expr OR Expr
  244     | Expr OR expr
  245     | expr OR Expr

  246 Probe: FULL l_par varref r_par
  247      | NFULL l_par varref r_par
  248      | EMPTY l_par varref r_par
  249      | NEMPTY l_par varref r_par

  250 Opt_enabler: ε
  251            | PROVIDED l_par full_expr r_par
  252            | PROVIDED error

  253 oname: ε
  254      | ':' NAME

  255 basetype: TYPE oname
  256         | UNAME
  257         | error

  258 typ_list: basetype
  259         | basetype ',' typ_list

  260 two_args: expr ',' expr

  261 args: ε
  262     | arg

  263 prargs: ε
  264       | ',' arg

  265 margs: arg
  266      | expr l_par arg r_par

  267 arg: expr
  268    | expr ',' arg

  269 rarg: varref
  270     | EVAL l_par expr r_par
  271     | CONST
  272     | '-' CONST

  273 rargs: rarg
  274      | rarg ',' rargs
  275      | rarg l_par rargs r_par
  276      | l_par rargs r_par

  277 nlst: NAME
  278     | nlst NAME
  279     | nlst ','


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 182 188
    '&' (38) 189
    '(' (40) 15
    ')' (41) 16
    '*' (42) 180 186
    '+' (43) 178 184
    ',' (44) 85 87 89 259 260 264 268 274 279
    '-' (45) 176 179 185 203 272
    '.' (46) 106
    '/' (47) 181 187
    ':' (58) 62 63 73 76 96 118 121 127 128 205 222 224 254
    '@' (64) 221 223
    '[' (91) 24 25 94 97 98 102 212 214 221 222
    ']' (93) 24 25 94 97 98 102 212 214 221 222
    '^' (94) 190
    '{' (123) 30 41 57 79 91 94 111 112 151 153 155
    '|' (124) 191
    '}' (125) 30 41 57 79 91 94 111 112 151 153 155
    '~' (126) 202
    error (256) 14 31 67 129 252 257
    ASSERT (258) 138
    PRINT (259) 135
    PRINTM (260) 136 137
    PREPROC (261)
    C_CODE (262) 52
    C_DECL (263) 53
    C_EXPR (264) 54
    C_STATE (265) 48 50
    C_TRACK (266) 49 51
    RUN (267) 207
    LEN (268) 208
    ENABLED (269) 209
    SET_P (270) 133
    GET_P (271) 210
    EVAL (272) 270
    PC_VAL (273) 220
    TYPEDEF (274) 41
    MTYPE (275)
    INLINE (276) 45
    RETURN (277) 162
    LABEL (278)
    OF (279) 94
    GOTO (280) 126
    BREAK (281) 125
    ELSE (282) 149
    SEMI (283) 81 112 169
    ARROW (284) 170 205
    IF (285) 122
    FI (286) 122
    DO (287) 124
    OD (288) 124
    FOR (289) 110
    SELECT (290) 121
    IN (291) 120
    SEP (292) 166
    DOTDOT (293) 118 121
    ATOMIC (294) 151
    NON_ATOMIC (295)
    D_STEP (296) 153
    UNLESS (297) 66
    TIMEOUT (298) 218
    NONPROGRESS (299) 219
    ACTIVE (300) 23 24 25
    PROCTYPE (301) 20
    D_PROCTYPE (302) 21
    HIDDEN (303) 69
    SHOW (304) 70
    ISLOCAL (305) 71
    PRIORITY (306) 227
    PROVIDED (307) 251 252
    FULL (308) 246
    EMPTY (309) 248
    NFULL (310) 247
    NEMPTY (311) 249
    CONST (312) 88 89 96 137 175 217 227 271 272
    TYPE (313) 77 79 255
    XU (314) 61 63
    NAME (315) 19 25 35 37 41 42 62 63 73 76 95 96 97 98 100 102 126 127 128 173 221 223 254 277 278
    UNAME (316) 78 256
    PNAME (317) 174 221 222 223 224
    INAME (318) 43 158 161
    STRING (319) 48 49 50 51 135
    CLAIM (320) 33
    TRACE (321) 39
    INIT (322) 27
    LTL (323) 29
    ASGN (324) 73 74 91 92 93 130 161
    SND (325) 116 204
    O_SND (326) 147
    RCV (327) 114 143 212
    R_RCV (328) 141 145 214
    IMPLIES (329) 233
    EQUIV (330) 234
    OR (331) 199 243 244 245
    AND (332) 198 240 241 242
    ALWAYS (333) 236
    EVENTUALLY (334) 237
    UNTIL (335) 230
    WEAK_UNTIL (336) 232
    RELEASE (337) 231
    NEXT (338) 235
    EQ (339) 196
    NE (340) 197
    GT (341) 143 145 192
    LT (342) 143 145 193
    GE (343) 194
    LE (344) 195
    LSHIFT (345) 200
    RSHIFT (346) 201
    INCR (347) 131
    DECR (348) 132
    UMIN (349)
    NEG (350)
    DOT (351)


Nonterminals, with rules where they appear

    $accept (116)
        on left: 0
    program (117)
        on left: 1
        on right: 0
    units (118)
        on left: 2 3
        on right: 1 3
    unit (119)
        on left: 4 5 6 7 8 9 10 11 12 13 14
        on right: 2 3
    l_par (120)
        on left: 15
        on right: 19 45 110 121 133 135 136 137 158 161 177 183 205 207 208 209 210 220 239 246 247 248 249 251 266 270 275 276
    r_par (121)
        on left: 16
        on right: 19 45 118 120 121 133 135 136 137 158 161 177 183 205 207 208 209 210 220 239 246 247 248 249 251 266 270 275 276
    proc (122)
        on left: 19
        on right: 4
    $@1 (123)
        on left: 17
        on right: 19
    $@2 (124)
        on left: 18
        on right: 19
    proctype (125)
        on left: 20 21
        on right: 19
    inst (126)
        on left: 22 23 24 25
        on right: 19
    init (127)
        on left: 27
        on right: 5
    $@3 (128)
        on left: 26
        on right: 27
    ltl (129)
        on left: 29
        on right: 7
    $@4 (130)
        on left: 28
        on right: 29
    ltl_body (131)
        on left: 30 31
        on right: 29
    claim (132)
        on left: 33
        on right: 6
    $@5 (133)
        on left: 32
        on right: 33
    optname (134)
        on left: 34 35
        on right: 33
    optname2 (135)
        on left: 36 37
        on right: 29
    events (136)
        on left: 39
        on right: 8
    $@6 (137)
        on left: 38
        on right: 39
    utype (138)
        on left: 41
        on right: 10
    $@7 (139)
        on left: 40
        on right: 41
    nm (140)
        on left: 42 43
        on right: 45
    ns (141)
        on left: 45
        on right: 12
    $@8 (142)
        on left: 44
        on right: 45
    c_fcts (143)
        on left: 46 47
        on right: 11
    cstate (144)
        on left: 48 49 50 51
        on right: 47
    ccode (145)
        on left: 52 53
        on right: 46 139
    cexpr (146)
        on left: 54
        on right: 216
    body (147)
        on left: 57
        on right: 19 27 33 39
    $@9 (148)
        on left: 55
        on right: 57
    $@10 (149)
        on left: 56
        on right: 57
    sequence (150)
        on left: 58 59
        on right: 57 59 111 112 151 153 155 166
    step (151)
        on left: 60 61 62 63 64 66 67
        on right: 58 59
    $@11 (152)
        on left: 65
        on right: 66
    vis (153)
        on left: 68 69 70 71
        on right: 77 78 79
    asgn (154)
        on left: 72 73 74
        on right: 79
    osubt (155)
        on left: 75 76
        on right: 77
    one_decl (156)
        on left: 77 78 79
        on right: 9 60 62 80 81
    decl_lst (157)
        on left: 80 81
        on right: 41 81 83
    decl (158)
        on left: 82 83
        on right: 19
    vref_lst (159)
        on left: 84 85
        on right: 61 85
    var_list (160)
        on left: 86 87
        on right: 77 78 87
    c_list (161)
        on left: 88 89
        on right: 89 91
    ivar (162)
        on left: 90 91 92 93
        on right: 86 87
    ch_init (163)
        on left: 94
        on right: 93
    vardcl (164)
        on left: 95 96 97 98
        on right: 90 91 92 93
    varref (165)
        on left: 99
        on right: 84 85 110 114 116 120 121 130 131 132 136 141 143 145 147 161 208 212 214 215 246 247 248 249 269
    pfld (166)
        on left: 100 102
        on right: 104 222 224
    $@12 (167)
        on left: 101
        on right: 102
    cmpnd (168)
        on left: 104
        on right: 99 106
    $@13 (169)
        on left: 103
        on right: 104
    sfld (170)
        on left: 105 106
        on right: 104
    stmnt (171)
        on left: 107 108
        on right: 64 66 127
    for_pre (172)
        on left: 110
        on right: 118 120
    $@14 (173)
        on left: 109
        on right: 110
    for_post (174)
        on left: 111 112
        on right: 118 120
    Special (175)
        on left: 114 116 118 120 121 122 124 125 126 127 128 129
        on right: 107
    $@15 (176)
        on left: 113
        on right: 114
    $@16 (177)
        on left: 115
        on right: 116
    $@17 (178)
        on left: 117
        on right: 118
    @18 (179)
        on left: 119
        on right: 120
    $@19 (180)
        on left: 123
        on right: 124
    Stmnt (181)
        on left: 130 131 132 133 135 136 137 138 139 141 143 145 147 148 149 151 153 155 158 161 162
        on right: 108 158 161
    $@20 (182)
        on left: 134
        on right: 135
    $@21 (183)
        on left: 140
        on right: 141
    $@22 (184)
        on left: 142
        on right: 143
    $@23 (185)
        on left: 144
        on right: 145
    $@24 (186)
        on left: 146
        on right: 147
    $@25 (187)
        on left: 150
        on right: 151
    $@26 (188)
        on left: 152
        on right: 153
    $@27 (189)
        on left: 154
        on right: 155
    $@28 (190)
        on left: 156
        on right: 158
    $@29 (191)
        on left: 157
        on right: 158
    $@30 (192)
        on left: 159
        on right: 161
    $@31 (193)
        on left: 160
        on right: 161
    options (194)
        on left: 163 164
        on right: 122 124 164
    option (195)
        on left: 166
        on right: 163 164
    $@32 (196)
        on left: 165
        on right: 166
    OS (197)
        on left: 167 168
        on right: 30 57 111 112 151 153 155 166
    semi (198)
        on left: 169 170
        on right: 13 168 171 172
    MS (199)
        on left: 171 172
        on right: 59 172
    aname (200)
        on left: 173 174
        on right: 207
    const_expr (201)
        on left: 175 176 177 178 179 180 181 182
        on right: 24 94 97 176 177 178 179 180 181 182
    expr (202)
        on left: 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 207 208 209 210 212 214 215 216 217 218 219 220 221 222 223 224 225
        on right: 92 102 118 121 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203 204 205 209 210 220 221 222 228 230 231 232 233 234 235 236 237 241 242 244 245 260 266 267 268 270
    $@33 (203)
        on left: 206
        on right: 207
    $@34 (204)
        on left: 211
        on right: 212
    $@35 (205)
        on left: 213
        on right: 214
    Opt_priority (206)
        on left: 226 227
        on right: 19 27 207
    full_expr (207)
        on left: 228 229
        on right: 30 130 138 148 162 251
    ltl_expr (208)
        on left: 230 231 232 233 234 235 236 237
        on right: 225
    Expr (209)
        on left: 238 239 240 241 242 243 244 245
        on right: 229 239 240 241 242 243 244 245
    Probe (210)
        on left: 246 247 248 249
        on right: 238
    Opt_enabler (211)
        on left: 250 251 252
        on right: 19
    oname (212)
        on left: 253 254
        on right: 255
    basetype (213)
        on left: 255 256 257
        on right: 258 259
    typ_list (214)
        on left: 258 259
        on right: 94 259
    two_args (215)
        on left: 260
        on right: 133
    args (216)
        on left: 261 262
        on right: 45 158 161 207
    prargs (217)
        on left: 263 264
        on right: 135
    margs (218)
        on left: 265 266
        on right: 116 147
    arg (219)
        on left: 267 268
        on right: 262 264 265 266 268
    rarg (220)
        on left: 269 270 271 272
        on right: 273 274 275
    rargs (221)
        on left: 273 274 275 276
        on right: 114 141 143 145 212 214 274 275 276
    nlst (222)
        on left: 277 278 279
        on right: 79 278 279


State 0

    0 $accept: • program $end

    error    shift, and go to state 1
    C_CODE   shift, and go to state 2
    C_DECL   shift, and go to state 3
    C_STATE  shift, and go to state 4
    C_TRACK  shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    INLINE   shift, and go to state 7
    SEMI     shift, and go to state 8
    ARROW    shift, and go to state 9
    ACTIVE   shift, and go to state 10
    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13
    CLAIM    shift, and go to state 14
    TRACE    shift, and go to state 15
    INIT     shift, and go to state 16
    LTL      shift, and go to state 17

    PROCTYPE    reduce using rule 22 (inst)
    D_PROCTYPE  reduce using rule 22 (inst)
    TYPE        reduce using rule 68 (vis)
    UNAME       reduce using rule 68 (vis)

    program   go to state 18
    units     go to state 19
    unit      go to state 20
    proc      go to state 21
    inst      go to state 22
    init      go to state 23
    ltl       go to state 24
    claim     go to state 25
    events    go to state 26
    utype     go to state 27
    ns        go to state 28
    c_fcts    go to state 29
    cstate    go to state 30
    ccode     go to state 31
    vis       go to state 32
    one_decl  go to state 33
    semi      go to state 34


State 1

   14 unit: error •

    $default  reduce using rule 14 (unit)


State 2

   52 ccode: C_CODE •

    $default  reduce using rule 52 (ccode)


State 3

   53 ccode: C_DECL •

    $default  reduce using rule 53 (ccode)


State 4

   48 cstate: C_STATE • STRING STRING
   50       | C_STATE • STRING STRING STRING

    STRING  shift, and go to state 35


State 5

   49 cstate: C_TRACK • STRING STRING
   51       | C_TRACK • STRING STRING STRING

    STRING  shift, and go to state 36


State 6

   41 utype: TYPEDEF • NAME '{' $@7 decl_lst '}'

    NAME  shift, and go to state 37


State 7

   45 ns: INLINE • nm l_par $@8 args r_par

    NAME   shift, and go to state 38
    INAME  shift, and go to state 39

    nm  go to state 40


State 8

  169 semi: SEMI •

    $default  reduce using rule 169 (semi)


State 9

  170 semi: ARROW •

    $default  reduce using rule 170 (semi)


State 10

   23 inst: ACTIVE •
   24     | ACTIVE • '[' const_expr ']'
   25     | ACTIVE • '[' NAME ']'

    '['  shift, and go to state 41

    $default  reduce using rule 23 (inst)


State 11

   69 vis: HIDDEN •

    $default  reduce using rule 69 (vis)


State 12

   70 vis: SHOW •

    $default  reduce using rule 70 (vis)


State 13

   71 vis: ISLOCAL •

    $default  reduce using rule 71 (vis)


State 14

   33 claim: CLAIM • optname $@5 body

    NAME  shift, and go to state 42

    $default  reduce using rule 34 (optname)

    optname  go to state 43


State 15

   39 events: TRACE • $@6 body

    $default  reduce using rule 38 ($@6)

    $@6  go to state 44


State 16

   27 init: INIT • $@3 Opt_priority body

    $default  reduce using rule 26 ($@3)

    $@3  go to state 45


State 17

   29 ltl: LTL • optname2 $@4 ltl_body

    NAME  shift, and go to state 46

    $default  reduce using rule 36 (optname2)

    optname2  go to state 47


State 18

    0 $accept: program • $end

    $end  shift, and go to state 48


State 19

    1 program: units •
    3 units: units • unit

    error    shift, and go to state 1
    C_CODE   shift, and go to state 2
    C_DECL   shift, and go to state 3
    C_STATE  shift, and go to state 4
    C_TRACK  shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    INLINE   shift, and go to state 7
    SEMI     shift, and go to state 8
    ARROW    shift, and go to state 9
    ACTIVE   shift, and go to state 10
    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13
    CLAIM    shift, and go to state 14
    TRACE    shift, and go to state 15
    INIT     shift, and go to state 16
    LTL      shift, and go to state 17

    $end        reduce using rule 1 (program)
    PROCTYPE    reduce using rule 22 (inst)
    D_PROCTYPE  reduce using rule 22 (inst)
    TYPE        reduce using rule 68 (vis)
    UNAME       reduce using rule 68 (vis)

    unit      go to state 49
    proc      go to state 21
    inst      go to state 22
    init      go to state 23
    ltl       go to state 24
    claim     go to state 25
    events    go to state 26
    utype     go to state 27
    ns        go to state 28
    c_fcts    go to state 29
    cstate    go to state 30
    ccode     go to state 31
    vis       go to state 32
    one_decl  go to state 33
    semi      go to state 34


State 20

    2 units: unit •

    $default  reduce using rule 2 (units)


State 21

    4 unit: proc •

    $default  reduce using rule 4 (unit)


State 22

   19 proc: inst • proctype NAME $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

    PROCTYPE    shift, and go to state 50
    D_PROCTYPE  shift, and go to state 51

    proctype  go to state 52


State 23

    5 unit: init •

    $default  reduce using rule 5 (unit)


State 24

    7 unit: ltl •

    $default  reduce using rule 7 (unit)


State 25

    6 unit: claim •

    $default  reduce using rule 6 (unit)


State 26

    8 unit: events •

    $default  reduce using rule 8 (unit)


State 27

   10 unit: utype •

    $default  reduce using rule 10 (unit)


State 28

   12 unit: ns •

    $default  reduce using rule 12 (unit)


State 29

   11 unit: c_fcts •

    $default  reduce using rule 11 (unit)


State 30

   47 c_fcts: cstate •

    $default  reduce using rule 47 (c_fcts)


State 31

   46 c_fcts: ccode •

    $default  reduce using rule 46 (c_fcts)


State 32

   77 one_decl: vis • TYPE osubt var_list
   78         | vis • UNAME var_list
   79         | vis • TYPE asgn '{' nlst '}'

    TYPE   shift, and go to state 53
    UNAME  shift, and go to state 54


State 33

    9 unit: one_decl •

    $default  reduce using rule 9 (unit)


State 34

   13 unit: semi •

    $default  reduce using rule 13 (unit)


State 35

   48 cstate: C_STATE STRING • STRING
   50       | C_STATE STRING • STRING STRING

    STRING  shift, and go to state 55


State 36

   49 cstate: C_TRACK STRING • STRING
   51       | C_TRACK STRING • STRING STRING

    STRING  shift, and go to state 56


State 37

   41 utype: TYPEDEF NAME • '{' $@7 decl_lst '}'

    '{'  shift, and go to state 57


State 38

   42 nm: NAME •

    $default  reduce using rule 42 (nm)


State 39

   43 nm: INAME •

    $default  reduce using rule 43 (nm)


State 40

   45 ns: INLINE nm • l_par $@8 args r_par

    '('  shift, and go to state 58

    l_par  go to state 59


State 41

   24 inst: ACTIVE '[' • const_expr ']'
   25     | ACTIVE '[' • NAME ']'

    CONST  shift, and go to state 60
    NAME   shift, and go to state 61
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 64


State 42

   35 optname: NAME •

    $default  reduce using rule 35 (optname)


State 43

   33 claim: CLAIM optname • $@5 body

    $default  reduce using rule 32 ($@5)

    $@5  go to state 65


State 44

   39 events: TRACE $@6 • body

    '{'  shift, and go to state 66

    body  go to state 67


State 45

   27 init: INIT $@3 • Opt_priority body

    PRIORITY  shift, and go to state 68

    $default  reduce using rule 226 (Opt_priority)

    Opt_priority  go to state 69


State 46

   37 optname2: NAME •

    $default  reduce using rule 37 (optname2)


State 47

   29 ltl: LTL optname2 • $@4 ltl_body

    $default  reduce using rule 28 ($@4)

    $@4  go to state 70


State 48

    0 $accept: program $end •

    $default  accept


State 49

    3 units: units unit •

    $default  reduce using rule 3 (units)


State 50

   20 proctype: PROCTYPE •

    $default  reduce using rule 20 (proctype)


State 51

   21 proctype: D_PROCTYPE •

    $default  reduce using rule 21 (proctype)


State 52

   19 proc: inst proctype • NAME $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

    NAME  shift, and go to state 71


State 53

   77 one_decl: vis TYPE • osubt var_list
   79         | vis TYPE • asgn '{' nlst '}'

    ASGN  shift, and go to state 72
    ':'   shift, and go to state 73

    NAME      reduce using rule 75 (osubt)
    $default  reduce using rule 72 (asgn)

    asgn   go to state 74
    osubt  go to state 75


State 54

   78 one_decl: vis UNAME • var_list

    NAME  shift, and go to state 76

    var_list  go to state 77
    ivar      go to state 78
    vardcl    go to state 79


State 55

   48 cstate: C_STATE STRING STRING •
   50       | C_STATE STRING STRING • STRING

    STRING  shift, and go to state 80

    $default  reduce using rule 48 (cstate)


State 56

   49 cstate: C_TRACK STRING STRING •
   51       | C_TRACK STRING STRING • STRING

    STRING  shift, and go to state 81

    $default  reduce using rule 49 (cstate)


State 57

   41 utype: TYPEDEF NAME '{' • $@7 decl_lst '}'

    $default  reduce using rule 40 ($@7)

    $@7  go to state 82


State 58

   15 l_par: '(' •

    $default  reduce using rule 15 (l_par)


State 59

   45 ns: INLINE nm l_par • $@8 args r_par

    $default  reduce using rule 44 ($@8)

    $@8  go to state 83


State 60

  175 const_expr: CONST •

    $default  reduce using rule 175 (const_expr)


State 61

   25 inst: ACTIVE '[' NAME • ']'

    ']'  shift, and go to state 84


State 62

  176 const_expr: '-' • const_expr

    CONST  shift, and go to state 60
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 85


State 63

  177 const_expr: l_par • const_expr r_par

    CONST  shift, and go to state 60
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 86


State 64

   24 inst: ACTIVE '[' const_expr • ']'
  178 const_expr: const_expr • '+' const_expr
  179           | const_expr • '-' const_expr
  180           | const_expr • '*' const_expr
  181           | const_expr • '/' const_expr
  182           | const_expr • '%' const_expr

    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '*'  shift, and go to state 89
    '/'  shift, and go to state 90
    '%'  shift, and go to state 91
    ']'  shift, and go to state 92


State 65

   33 claim: CLAIM optname $@5 • body

    '{'  shift, and go to state 66

    body  go to state 93


State 66

   57 body: '{' • $@9 sequence OS $@10 '}'

    $default  reduce using rule 55 ($@9)

    $@9  go to state 94


State 67

   39 events: TRACE $@6 body •

    $default  reduce using rule 39 (events)


State 68

  227 Opt_priority: PRIORITY • CONST

    CONST  shift, and go to state 95


State 69

   27 init: INIT $@3 Opt_priority • body

    '{'  shift, and go to state 66

    body  go to state 96


State 70

   29 ltl: LTL optname2 $@4 • ltl_body

    error  shift, and go to state 97
    '{'    shift, and go to state 98

    ltl_body  go to state 99


State 71

   19 proc: inst proctype NAME • $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

    $default  reduce using rule 17 ($@1)

    $@1  go to state 100


State 72

   74 asgn: ASGN •

    $default  reduce using rule 74 (asgn)


State 73

   73 asgn: ':' • NAME ASGN
   76 osubt: ':' • NAME

    NAME  shift, and go to state 101


State 74

   79 one_decl: vis TYPE asgn • '{' nlst '}'

    '{'  shift, and go to state 102


State 75

   77 one_decl: vis TYPE osubt • var_list

    NAME  shift, and go to state 76

    var_list  go to state 103
    ivar      go to state 78
    vardcl    go to state 79


State 76

   95 vardcl: NAME •
   96       | NAME • ':' CONST
   97       | NAME • '[' const_expr ']'
   98       | NAME • '[' NAME ']'

    '['  shift, and go to state 104
    ':'  shift, and go to state 105

    $default  reduce using rule 95 (vardcl)


State 77

   78 one_decl: vis UNAME var_list •

    $default  reduce using rule 78 (one_decl)


State 78

   86 var_list: ivar •
   87         | ivar • ',' var_list

    ','  shift, and go to state 106

    $default  reduce using rule 86 (var_list)


State 79

   90 ivar: vardcl •
   91     | vardcl • ASGN '{' c_list '}'
   92     | vardcl • ASGN expr
   93     | vardcl • ASGN ch_init

    ASGN  shift, and go to state 107

    $default  reduce using rule 90 (ivar)


State 80

   50 cstate: C_STATE STRING STRING STRING •

    $default  reduce using rule 50 (cstate)


State 81

   51 cstate: C_TRACK STRING STRING STRING •

    $default  reduce using rule 51 (cstate)


State 82

   41 utype: TYPEDEF NAME '{' $@7 • decl_lst '}'

    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13

    $default  reduce using rule 68 (vis)

    vis       go to state 32
    one_decl  go to state 108
    decl_lst  go to state 109


State 83

   45 ns: INLINE nm l_par $@8 • args r_par

    C_EXPR       shift, and go to state 110
    RUN          shift, and go to state 111
    LEN          shift, and go to state 112
    ENABLED      shift, and go to state 113
    GET_P        shift, and go to state 114
    PC_VAL       shift, and go to state 115
    TIMEOUT      shift, and go to state 116
    NONPROGRESS  shift, and go to state 117
    CONST        shift, and go to state 118
    NAME         shift, and go to state 119
    PNAME        shift, and go to state 120
    SND          shift, and go to state 121
    ALWAYS       shift, and go to state 122
    EVENTUALLY   shift, and go to state 123
    NEXT         shift, and go to state 124
    '-'          shift, and go to state 125
    '~'          shift, and go to state 126
    '('          shift, and go to state 58

    $default  reduce using rule 261 (args)
